--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
         <li><a href="#intro">Welcome</a></li>
         <li><a href="#one">Who we are</a></li>
         <li><a href="#two">What we do</a></li>
-        <li><a href="#two">Projects</a></li>
+        <!-- <li><a href="#two">Projects</a></li> -->
         <li><a href="#three">Get in touch</a></li>
       </ul>
     </nav>
@@ -57,8 +57,11 @@
         <div class="inner">
           <h2>Debanga</h2>
           <p>Debanga Narayan Sarma. Structural Engineer.</p>
-          <ul class="actions">
-            <li><a href="generic.html" class="button">Learn more</a></li>
+          <ul class="icons">
+            <li><a href="https://twitter.com/SarmaPradipta" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/pradiptasarma/" class="icon brands fa-linkedin-in"><span
+                        class="label">LinkedIn</span></a></li>
           </ul>
         </div>
       </div>
@@ -69,8 +72,11 @@
         <div class="inner">
           <h2>Gaurav</h2>
           <p>Gaurav Das. Architect.</p>
-          <ul class="actions">
-            <li><a href="generic.html" class="button">Learn more</a></li>
+          <ul class="icons">
+            <li><a href="https://twitter.com/SarmaPradipta" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/pradiptasarma/" class="icon brands fa-linkedin-in"><span
+                        class="label">LinkedIn</span></a></li>
           </ul>
         </div>
       </div>
@@ -81,8 +87,11 @@
         <div class="inner">
           <h2>Pradipta</h2>
           <p>Pradipta Sarma. Elecrical and Smart Home Automation design.</p>
-          <ul class="actions">
-            <li><a href="generic.html" class="button">Learn more</a></li>
+          <ul class="icons">
+            <li><a href="https://twitter.com/SarmaPradipta" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
+            </li>
+            <li><a href="https://www.linkedin.com/in/pradiptasarma/" class="icon brands fa-linkedin-in"><span
+                        class="label">LinkedIn</span></a></li>
           </ul>
         </div>
       </div>
