--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   <link rel="stylesheet" href="/css/main.css"/>
+  <link rel="icon" href="/images/favicon.ico">
   <noscript>
     <link rel="stylesheet" href="/css/noscript.css"/>
   </noscript>
