--- a/views/index.ejs
+++ b/views/index.ejs
@@ -245,14 +245,11 @@
             <li>
               <h3>Social</h3>
               <ul class="icons">
-                <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
-                </li>
                 <li><a href="https://www.facebook.com/FirstBrickArchitectsandEngineers/" class="icon brands fa-facebook-f"><span
                             class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon brands fa-instagram"><span
+                <li><a href="https://instagram.com/first_brick_arch_engr" class="icon brands fa-instagram"><span
                             class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon brands fa-linkedin-in"><span
-                            class="label">LinkedIn</span></a></li>
+
               </ul>
             </li>
           </ul>
