--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     content="width=device-width, initial-scale=1, user-scalable=no"
   />
   <link rel="stylesheet" href="/css/main.css" />
+  <link rel="icon" href="/images/favicon.ico" />
   <noscript>
     <link rel="stylesheet" href="/css/noscript.css" />
   </noscript>
@@ -306,11 +307,6 @@
                 <h3>Social</h3>
                 <ul class="icons">
                   <li>
-                    <a href="#" class="icon brands fa-twitter"
-                      ><span class="label">Twitter</span></a
-                    >
-                  </li>
-                  <li>
                     <a
                       href="https://www.facebook.com/FirstBrickArchitectsandEngineers/"
                       class="icon brands fa-facebook-f"
@@ -318,13 +314,10 @@
                     >
                   </li>
                   <li>
-                    <a href="#" class="icon brands fa-instagram"
+                    <a
+                      href="https://instagram.com/first_brick_arch_engr"
+                      class="icon brands fa-instagram"
                       ><span class="label">Instagram</span></a
-                    >
-                  </li>
-                  <li>
-                    <a href="#" class="icon brands fa-linkedin-in"
-                      ><span class="label">LinkedIn</span></a
                     >
                   </li>
                 </ul>
