--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,7 +59,7 @@
     <section id="one" class="wrapper style2 spotlights">
       <section>
         <a href="#" class="image"
-          ><img src="images/pic01.jpg" alt="" data-position="center center"
+          ><img src="images/debanga.jpeg" alt="" data-position="center center"
         /></a>
         <div class="content">
           <div class="inner">
@@ -93,7 +93,7 @@
       </section>
       <section>
         <a href="#" class="image"
-          ><img src="images/arch_gaurav.jpg" alt="" data-position="top center"
+          ><img src="images/gaurav.jpeg" alt="" data-position="top center"
         /></a>
         <div class="content">
           <div class="inner">
@@ -132,7 +132,7 @@
         <div class="content">
           <div class="inner">
             <h2>Pradipta</h2>
-            <p>Pradipta Sarma. Elecrical and Smart Home Automation design.</p>
+            <p>Pradipta Sarma. Elecrical and Smart Home Automation designer.</p>
             <ul class="icons">
               <li>
                 <a
