--- a/views/index.ejs
+++ b/views/index.ejs
@@ -259,8 +259,8 @@
                   ></textarea>
                 </div>
               </div>
-              <div class="g-recaptcha" style="margin-bottom:10px ;" data-sitekey="Your Site Security Key"></div>
-              <ul class="actions">
+              <div class="g-recaptcha" name ="captchamsg" style="margin-bottom:10px ;" data-sitekey="6LeQFNYZAAAAANZJ1HDS6f4enSq6YdcLhNhOruZB"></div>
+              <span id="captchamsg" style="color:red" ></span>              <ul class="actions">
                 <li><a href="" class="button submit">Send Message</a></li>
               </ul>
             </form>
@@ -273,7 +273,13 @@
                 var email = $("#email").val();
                 var phone = $("#phone").val();
                 var message = $("#message").val();
-                console.log(name);
+                var response = grecaptcha.getResponse();
+                 console.log(name);
+                if(!response) {
+                  document.getElementById('captchamsg').innerHTML="Please Verify the Captcha";
+                  console.log("Captcha error")
+                  return false;
+                }                
                 if (!name || !email || !phone || !message) {
                   console.log("error");
                   alert("Please fill all the fields");
