--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2613,6 +2613,139 @@ input, select, textarea {
 				width: 100%;
 			}
 
+
+/* Project Image  */
+
+.image-section{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.image-wrapper{
+	position: relative;
+}
+
+.bg-layer{
+	position: relative;
+	margin: 8px 5px;
+	width: 340px;
+	height: 300px;
+}
+
+.bg-layer p{
+	border-radius: 0.28em;
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 99;
+}
+
+.image-wrapper img{
+	height: 100%;
+	width: 100%;
+	border-radius: 0.28em;
+	object-fit: cover;
+}
+
+.bg-layer p:hover{
+	cursor: pointer;
+	transition: 0.3s ease-in;
+	background-color:rgba(0, 0, 0, 0.349);
+}
+
+
+@media only screen and (max-width: 1181px) and (min-width: 1062px){
+	.bg-layer{
+		width: 300px;
+		height: 270px;
+	}
+}
+
+@media only screen and (max-width: 1062px) and (min-width: 975px){
+	.bg-layer{
+		width: 270px;
+		height: 240px;
+	}
+}
+
+@media only screen and (max-width: 780px){
+	.bg-layer{
+		width: 480px;
+		height: 340px;
+	}
+}
+
+@media only screen and (max-width: 480px){
+	.bg-layer{
+		width: 95vw;
+		height: 230px;
+	}
+}
+
+/* Modal  */
+.modal {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 99999; /* Sit on top */
+	padding-top: 100px; /* Location of the box */
+	left: 0;
+	top: 0;
+	width: 100%; /* Full width */
+	height: 100%; /* Full height */
+	background-color: rgb(0,0,0); /* Fallback color */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+	position: relative;
+	background-color: #fefefe;
+	margin: auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+	min-height: 60%;
+  }
+  
+  
+  /* The Close Button */
+  .close {
+	color: #aaaaaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+	color: #000;
+	text-decoration: none;
+	cursor: pointer;
+  }
+
+  .modal-images{
+	  display:flex;
+	  flex-wrap: wrap;
+	  justify-content: center;
+	  align-items: center;
+	  grid-template-columns: repeat(4,1fr);
+	  height: 80%;
+  }
+
+  .modal-images img{
+	  height: 100%;
+	  margin: 5px;
+	  max-width: 300px;
+	  max-height: 300px;
+	  width: 100%;
+	  height: 270px;
+	  width: 270px;
+	  object-fit: cover;
+  }
+
+
+
 /* List */
 
 	ol {
