--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4007,14 +4007,14 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.jpg");
+		background-image: url("images/intro-3.jpg");
 		background-position: top right;
 		background-repeat: no-repeat;
 		background-size: 100% 100%;
 	}
 
 		#intro p {
-			color: navajowhite;
+			color: #ff7247;
 			font-size: 1.25em;
 		}
 
@@ -4035,7 +4035,7 @@ input, select, textarea {
 			}
 
 		#intro h1 {
-			color: aliceblue;
+			color: #ffe9e3;
 		}
 
 		@media screen and (max-width: 1280px) {
