--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3373,7 +3373,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #5e42a6;
+			background-color: #a6a6a6;
 		}
 
 		.wrapper.style1-alt {
@@ -4008,14 +4008,16 @@ input, select, textarea {
 	#intro {
 		background-attachment: fixed;
 		background-image: url("images/intro-3.jpg");
+		background-blend-mode: overlay;
 		background-position: top right;
 		background-repeat: no-repeat;
-		background-size: 100% 100%;
+		background-size: cover;
 	}
 
+
 		#intro p {
-			color: #ff7247;
-			font-size: 1.25em;
+			font-size: 1.25em; 
+			color:#14042f;
 		}
 
 			@media screen and (max-width: 980px) {
@@ -4035,7 +4037,7 @@ input, select, textarea {
 			}
 
 		#intro h1 {
-			color: #ffe9e3;
+			color: #e5e7ff;
 		}
 
 		@media screen and (max-width: 1280px) {
